WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87327
REGRESSION (
r118013
-
r118031
): Loops/Reloads under www.yahoo.com, quits after three tries with error
https://bugs.webkit.org/show_bug.cgi?id=87327
Summary
REGRESSION (r118013-r118031): Loops/Reloads under www.yahoo.com, quits after ...
Joe Strzemp
Reported
2012-05-23 17:36:36 PDT
In order to reproduce the issue, simply visit www.yahoo.com and the page reloads three times and then quits with: Safari can't display this webpage Safari has repeatedly encountered an error while trying to display "
http://www.yahoo.com
" This worked prior in nightly
r117946
, but fails in
r118039
and also fails in the latest (
r118179
) nightly build. Side note: There is an error that appears briefly in the console log on the first page load, but there doesn't appear to be an obvious way to capture that output since the console log is cleared when the page reloads. It would be nice if there was some way to capture/save that output, stop the reload process on first error, or to see a history of prior errors.
Attachments
the patch
(7.30 KB, patch)
2012-05-24 21:37 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(5.96 KB, patch)
2012-05-24 21:38 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(10.81 KB, patch)
2012-05-24 21:56 PDT
,
Filip Pizlo
no flags
Details
Formatted Diff
Diff
the patch
(10.96 KB, patch)
2012-05-24 22:16 PDT
,
Filip Pizlo
ggaren
: review+
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Joe Strzemp
Comment 1
2012-05-24 08:22:29 PDT
The nightly
r118336
still has the problem, but it may require drilling down on www.yahoo.com instead of just the home page. Seems most any story cause the reload problem.
Alexey Proskuryakov
Comment 2
2012-05-24 13:54:12 PDT
***
Bug 87331
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 3
2012-05-24 14:14:24 PDT
Further reduced to <
http://trac.webkit.org/log/trunk/?rev=118031&stop_rev=118013
>. But this appears resolved in latest nightly.
Joe Strzemp
Comment 4
2012-05-24 14:53:01 PDT
As I noted in
Comment #1
, this is still broken on pages *under* yahoo.com (even though it's not on problem on the yahoo home page). Just checked, still broken on:
r118394
Hers's an example that (still) shows the problem:
http://news.yahoo.com/blogs/sideshow/another-bear-falls-tree-colorado-being-tranquilized-photos-190859388.html
Filip Pizlo
Comment 5
2012-05-24 15:22:18 PDT
I will look at this soon; right now I'm plodding through a couple of other bugs.
Filip Pizlo
Comment 6
2012-05-24 20:06:24 PDT
Yup, I can repro in
r118408
Filip Pizlo
Comment 7
2012-05-24 21:37:24 PDT
Created
attachment 143966
[details]
the patch
Filip Pizlo
Comment 8
2012-05-24 21:38:29 PDT
Created
attachment 143967
[details]
the patch Removed unnecessary noise form the patch.
Filip Pizlo
Comment 9
2012-05-24 21:56:51 PDT
Created
attachment 143970
[details]
the patch
Filip Pizlo
Comment 10
2012-05-24 22:14:28 PDT
Fascinating, I think I can see why I broke this code in the first place. I need something more general because in inspector/elements/undo-dom-edits.html, we can have an abstract value corresponding to something other than a cell flowing into the CheckStructure. In particular, we need to look at both m_structure and m_type.
Filip Pizlo
Comment 11
2012-05-24 22:16:20 PDT
Created
attachment 143976
[details]
the patch
Geoffrey Garen
Comment 12
2012-05-24 22:37:07 PDT
Comment on
attachment 143976
[details]
the patch r=me
Filip Pizlo
Comment 13
2012-05-24 22:41:26 PDT
Landed in
http://trac.webkit.org/changeset/118476
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug