REGRESSION (r118013-r118031): Loops/Reloads under www.yahoo.com, quits after three tries with error https://bugs.webkit.org/show_bug.cgi?id=87327

Source/JavaScriptCore:

Reviewed by Geoffrey Garen.

If you use AbstractValue::filter(StructureSet) to test subset relationships between TOP and a
set containing >=2 elements, you're going to have a bad time.

That's because AbstractValue considers a set with >=2 elements to be equivalent to TOP, in order
to save space and speed up convergence. So filtering has no effect in this case, which made
the code think that the abstract value was proving that the structure check was unnecessary.
The correct thing to do is to use isSubsetOf() on the StructureAbstractValue, which does the
right thingies for TOP and >=2 elements.

* dfg/DFGAbstractState.cpp:
(JSC::DFG::AbstractState::execute):
* dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::compile):
* dfg/DFGSpeculativeJIT64.cpp:
(JSC::DFG::SpeculativeJIT::compile):

LayoutTests:

Reviewed by Geoffrey Garen.

* fast/js/dfg-check-two-structures-expected.txt: Added.
* fast/js/dfg-check-two-structures.html: Added.
* fast/js/script-tests/dfg-check-two-structures.js: Added.
(foo):



Canonical link: https://commits.webkit.org/105229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118476 268f45cc-cd09-0410-ab3c-d52691b4dbfc