Source/JavaScriptCore/dfg/DFGSpeculativeJIT64.cpp
@@ -3431,9 +3431,9 @@ void SpeculativeJIT::compile(Node& node)
         break;
     }
     case CheckStructure: {
-        AbstractValue value = m_state.forNode(node.child1());
-        value.filter(node.structureSet());
-        if (value == m_state.forNode(node.child1())) {
+        AbstractValue& value = m_state.forNode(node.child1());
+        if (value.m_structure.isSubsetOf(node.structureSet())
+            && isCellPrediction(value.m_type)) {
             noResult(m_compileIndex);
             break;
         }
